--- a/incr/Core/Core.fsproj
+++ b/incr/Core/Core.fsproj
@@ -66,8 +66,8 @@
     <Compile Include="IncrementalBuildPipeline.fs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Hosts\VS\TddStudioPackage.Extensions\TddStudioPackage.Extensions.fsproj">
-      <Name>TddStudioPackage.Extensions</Name>
+    <ProjectReference Include="..\..\Hosts\VS\TddStudioPackage.Core\TddStudioPackage.Core.fsproj">
+      <Name>TddStudioPackage.Core</Name>
       <Project>{0055b0cc-39ba-4dea-ad3e-231cffe4ed58}</Project>
       <Private>True</Private>
     </ProjectReference>
@@ -131,7 +131,7 @@
     <Reference Include="VSLangProj80, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="VslangProj90, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   </ItemGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
