--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,8 +6,8 @@
   <repository path="..\Engine\packages.config" />
   <repository path="..\Hosts\Common\CommonUI\packages.config" />
   <repository path="..\Hosts\Console\TddStud10App\packages.config" />
-  <repository path="..\Hosts\VS\TddStudioPackage.Extensions.UnitTests\packages.config" />
-  <repository path="..\Hosts\VS\TddStudioPackage.Extensions\packages.config" />
+  <repository path="..\Hosts\VS\TddStudioPackage.Core.UnitTests\packages.config" />
+  <repository path="..\Hosts\VS\TddStudioPackage.Core\packages.config" />
   <repository path="..\Hosts\VS\TddStudioPackage\packages.config" />
   <repository path="..\RealTimeEtwListener\packages.config" />
   <repository path="..\TestExecution\TestRuntime\packages.config" />
