--- a/Hosts/VS/TddStudioPackage.Core.UnitTests/TddStudioPackage.Core.UnitTests.fsproj
+++ b/Hosts/VS/TddStudioPackage.Core.UnitTests/TddStudioPackage.Core.UnitTests.fsproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\..\..\packages\xunit.runner.visualstudio.2.0.0\build\net20\xunit.runner.visualstudio.props" Condition="Exists('..\..\..\packages\xunit.runner.visualstudio.2.0.0\build\net20\xunit.runner.visualstudio.props')" />
   <Import Project="..\..\..\packages\xunit.core.2.0.0\build\portable-net45+win+wpa81+wp80+monotouch+monoandroid+Xamarin.iOS\xunit.core.props" Condition="Exists('..\..\..\packages\xunit.core.2.0.0\build\portable-net45+win+wpa81+wp80+monotouch+monoandroid+Xamarin.iOS\xunit.core.props')" />
@@ -12,7 +12,7 @@
     <RootNamespace>TddStudioPackage.Core.UnitTests</RootNamespace>
     <AssemblyName>R4nd0mApps.TddStud10.Hosts.VS.TddStudioPackage.Core.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFSharpCoreVersion>4.3.0.0</TargetFSharpCoreVersion>
+    <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <Name>TddStudioPackage.Core.UnitTests</Name>
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
@@ -78,15 +78,9 @@
     <Compile Include="Editor\GlpyhBoundsGeneratorTests.fs" />
     <Compile Include="Editor\GlpyhInfoGeneratorTests.fs" />
     <Compile Include="Editor\MarginTests.fs" />
-    <Compile Include="Workspace\SolutionEventsListenerTests.fs" />
-    <Compile Include="Workspace\ProjectEventsListenerTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <Reference Include="Foq">
-      <HintPath>..\..\..\packages\Foq.1.7\Lib\net45\Foq.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.Diagnostics.Tracing.EventSource">
       <HintPath>..\..\..\packages\Microsoft.Diagnostics.Tracing.EventSource.Redist.1.0.26\lib\net40\Microsoft.Diagnostics.Tracing.EventSource.dll</HintPath>
       <Private>True</Private>
