--- a/Hosts/Common/CommonUI/CommonUI.csproj
+++ b/Hosts/Common/CommonUI/CommonUI.csproj
@@ -106,6 +106,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoveringTests\MainUserControl.xaml.cs">
+      <DependentUpon>MainUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CoveringTests\ViewModel\CoveringTestViewModel.cs" />
+    <Compile Include="CoveringTests\ViewModel\ViewModelLocator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusBar\RunStateToIconTextConverter.cs" />
     <Compile Include="StatusBar\RunStateToIconColorConverter.cs" />
@@ -123,8 +128,13 @@
     <Compile Include="TestCode\SpyVsTrackProjectDocuments2.cs" />
     <Compile Include="TestCode\FakeWpfTextViewLine.cs" />
     <Compile Include="TestCode\FakeWpfTextView.cs" />
+    <Compile Include="CoveringTests\ViewModel\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="CoveringTests\MainUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="StatusBar\NotificationIcon.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -135,6 +145,20 @@
       <Project>{e5fb2293-1833-4c4c-800e-a31ac891a931}</Project>
       <Name>Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="CoveringTests\Resources\actiongototest.png" />
+    <Resource Include="CoveringTests\Resources\actionstartwithdebug.png" />
+    <Resource Include="CoveringTests\Resources\actionstartwithoutdebug.png" />
+    <Resource Include="CoveringTests\Resources\testresultfailed.png" />
+    <Resource Include="CoveringTests\Resources\testresultpassed.png" />
+    <Resource Include="CoveringTests\Resources\testresultunknown.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="CoveringTests\Resources\actionexpand.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="CoveringTests\Resources\actioncollapse.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.0.26\build\Microsoft.Diagnostics.Tracing.EventRegister.targets" Condition="('$(Configuration)' != 'Debug') and Exists('..\..\..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.0.26\build\Microsoft.Diagnostics.Tracing.EventRegister.targets')" />
