Feature #8- WIP wiring up the covering tests popup

--- a/Hosts/Common/CommonUI/CommonUI.csproj
+++ b/Hosts/Common/CommonUI/CommonUI.csproj
@@ -110,6 +110,9 @@
       <DependentUpon>MainUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="CoveringTests\ViewModel\CoveringTestViewModel.cs" />
+    <Compile Include="CoveringTests\ViewModel\MainViewModel.designtime.cs">
+      <DependentUpon>MainViewModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="CoveringTests\ViewModel\ViewModelLocator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusBar\RunStateToIconTextConverter.cs" />
