Misc fixes: Restricting displayname in popup + ensuring we dont start run if sln is not fully loaded or is unloading.

--- a/Hosts/VS/TddStudioPackage.Core/TddStudioPackage.Core.fsproj
+++ b/Hosts/VS/TddStudioPackage.Core/TddStudioPackage.Core.fsproj
@@ -63,6 +63,7 @@
     <Compile Include="PkgGuids.fs" />
     <Compile Include="PkgCmdID.fs" />
     <Compile Include="ErrorHandlerExtensions.fs" />
+    <Compile Include="VsSolutionExtensions.fs" />
     <Compile Include="VsUIShellExtensions.fs" />
     <Compile Include="EditorFrameworkExtensions.fs" />
     <Compile Include="Editor\Domain.fs" />
